# Biotaitan

./: Biotaitan.ino  barcode.cpp  barcode.h  lcm.cpp  lcm.h  main.h  optic.cpp  optic.h  pd_opa.asc  system.cpp  system.h  temp_ctrl.c  temp_ctrl.cpp  temp_ctrl.h
Biotaitan/: CMakeLists.txt  platformio.ini  sdkconfig
Biotaitan/lib/ADS1115/: CMakeLists.txt
Biotaitan/lib/LT768/: LT768.cpp  LT768.h
Biotaitan/lib/LT768_LCD/: LT768_LCD.cpp  LT768_LCD.h
Biotaitan/lib/LT768_Lib/: LT768_Lib.cpp  LT768_Lib.h
Biotaitan/lib/barcode/: CMakeLists.txt  barcode.cpp  barcode.h
Biotaitan/lib/i2c_api/: CMakeLists.txt  i2c_api.c  i2c_api.h
Biotaitan/lib/lcm/: CMakeLists.txt  lcm.c  lcm.cpp  lcm.h
Biotaitan/lib/msc/: CMakeLists.txt  msc.cpp  msc.h
Biotaitan/lib/optic/: CMakeLists.txt  optic.c  optic.cpp  optic.h
Biotaitan/lib/rtc_module/: CMakeLists.txt  rtc_module.cpp  rtc_module.h
Biotaitan/lib/sd_card/: CMakeLists.txt  sd_card.cpp  (+1 more)
Biotaitan/main/: main.c  main.h
Biotaitan/src/: main.cpp
Biotaitan_ESP32C6/: CMakeLists.txt  sdkconfig.esp32-c6-devkitc-1
Biotaitan_ESP32C6/include/: main.h  optic.h  temp_ctrl.h
Biotaitan_ESP32C6/src/: main.c  temp_ctrl.cpp
Optic_Temp_Ctrl/: Optic_Temp_Ctrl.ino  optic.cpp  optic.h  system.cpp  system.h  temp_ctrl.cpp  temp_ctrl.h
Optic_Test/: Optic_Test.ino
PCB/: Controller.PrjPCB  Controller.PrjPCBStructure  Controller.SchDoc  Controller_洗板資料.txt  Optic.PcbDoc  Optic.PrjPCB  Optic.PrjPCBStructure  Optic.PrjPCBVariants  Optic.SchDoc  Optic_洗板資料.txt
PCB/lib/: Biotaitan.PcbLib  Biotaitan.Schlib
Temp_Ctrl/: Temp_Ctrl.ino
(+12 files in other folders)
